// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/component/module/featured should render correctly 1`] = `
<span
  className="m-featured foo"
  itemScope={true}
  itemType="https://schema.org/ItemList"
  role="list"
>
  <li
    className="m-featured__list-item"
    itemProp="itemListElement"
    itemScope={true}
    itemType="http://schema.org/SiteNavigationElement"
  >
    <a
      aria-current={null}
      className="c-link m-featured__item"
      href="/work/path/"
      onClick={[Function]}
      tabIndex="0"
      title="headline"
    >
      <span
        className="m-featured__hover"
      >
        <span
          className="m-featured__text"
        >
          <span
            aria-level="3"
            className="m-featured__headline"
            role="heading"
          >
            headline
          </span>
          <i
            aria-hidden="true"
            className="c-font-icon--plus m-featured__icon"
          />
        </span>
      </span>
      <meta
        content="headline"
        itemProp="name"
      />
    </a>
  </li>
  Module Featured Children
</span>
`;

exports[`common/component/module/featured should render no itemType if unset 1`] = `
<span
  className="m-featured foo"
  role="list"
>
  <li
    className="m-featured__list-item"
    itemProp="itemListElement"
    itemScope={true}
    itemType="http://schema.org/SiteNavigationElement"
  >
    <a
      aria-current={null}
      className="c-link m-featured__item"
      href="/work/path/"
      onClick={[Function]}
      tabIndex="0"
      title="headline"
    >
      <span
        className="m-featured__hover"
      >
        <span
          className="m-featured__text"
        >
          <span
            aria-level="3"
            className="m-featured__headline"
            role="heading"
          >
            headline
          </span>
          <i
            aria-hidden="true"
            className="c-font-icon--plus m-featured__icon"
          />
        </span>
      </span>
      <meta
        content="headline"
        itemProp="name"
      />
    </a>
  </li>
  Module featured children
</span>
`;

exports[`common/component/module/featured should return null if no content is empty 1`] = `null`;
